--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "greggilbert/recaptcha",
-    "description": "reCAPTCHA Validator for Laravel 5",
-	"keywords": ["recaptcha", "captcha", "laravel", "laravel5"],
-	"homepage": "http://github.com/greggilbert/recaptcha",
+    "name": "welkervinicius/recaptcha",
+    "description": "reCAPTCHA Validator for Laravel 5/6",
+	"keywords": ["recaptcha", "captcha", "laravel", "laravel5", "laravel6"],
+	"homepage": "http://github.com/welkervinicius/recaptcha",
 	"license": "MIT",
     "abandoned": true,
     "authors": [
